crates/gossamer-diagnostics/tests/snapshots/GT0055.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0055]: A by-value aggregate would cross a concurrency boundary whose compiled - here
--- framed ---
error[GT0055]: A by-value aggregate would cross a concurrency boundary whose compiled
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
