crates/gossamer-diagnostics/tests/snapshots/GT0057.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
assertion_line: 86
expression: rendered
---
--- plain ---
error[GT0057]: A built-in iterator was passed to a parameter bound by an iteration - here
--- framed ---
error[GT0057]: A built-in iterator was passed to a parameter bound by an iteration
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
