crates/gossamer-diagnostics/tests/snapshots/GT0058.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0058]: A trait impl leaves out a method the trait declares without a - here
--- framed ---
error[GT0058]: A trait impl leaves out a method the trait declares without a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
