crates/gossamer-diagnostics/tests/snapshots/GT0060.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0060]: A path projected an associated item that nothing in scope declares. - here
--- framed ---
error[GT0060]: A path projected an associated item that nothing in scope declares.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
