crates/gossamer-diagnostics/tests/snapshots/GT0061.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0061]: An associated item reached through a trait has several candidate - here
--- framed ---
error[GT0061]: An associated item reached through a trait has several candidate
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
