crates/gossamer-diagnostics/tests/snapshots/GT0062.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0062]: A value with no textual form was passed to a format macro: a - here
--- framed ---
error[GT0062]: A value with no textual form was passed to a format macro: a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
