crates/gossamer-diagnostics/tests/snapshots/GT0063.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0063]: A method was called from outside the module whose `impl` block - here
--- framed ---
error[GT0063]: A method was called from outside the module whose `impl` block
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
